changed seeding method

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,10 +4,11 @@
         <article class="post">
             <h3>{{title}}</h3>
             <p>{{content}}</p>
-            <p>Posted by {{User.name}} on {{createdAt}}</p>
-            <a href="/post/{{id}}">Read More</a>
+            <p>Posted by {{User.name}}</p>
+            <a href="/Post/{{id}}">Read More</a>
         </article>
     {{else}}
         <p>No posts found.</p>
     {{/each}}
 </section>
+
