--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<section class="posts">
+<section class="posts-container">
     <h2>Latest Posts</h2>
     {{#each posts}}
         <article class="post">
