--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>The Tech Blog</h1>
+    <header class="header">
         <!-- Nav bar -->
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/dashboard">Dashboard</a></li>
@@ -21,9 +21,10 @@
                 {{/if}}
             </ul>
         </nav>
+        <h1 class="blog-title">The Tech Blog</h1>
     </header>
     
-    <main>
+    <main class="main-content">
         {{{body}}}
     </main>
 
