--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
                 <li><button id="logout">Logout</button></li>
                 {{else}}
                 <li><a href="/login">Login</a></li>
-                <li><a href="/signup">Signup</a></li>
+                {{!-- <li><a href="/signup">Signup</a></li> --}}
                 {{/if}}
             </ul>
         </nav>
@@ -31,5 +31,6 @@
     <footer>
         <p>&copy; 2024 Tech Blog</p>
     </footer>
+    <script src="/js/logout.js"></script>
 </body>
 </html>
