--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,24 @@
-<section class="posts-container">
-    <h2>Latest Posts</h2>
-    <container class="post">
-    {{#if posts}}
-    {{#each posts}}
-        <article>
-            <h3>{{title}}</h3>
-            <p>{{content}}</p>
-            <p>Posted by {{user.name}} {{createdAt}} </p>
-            <a href="/Post/{{id}}">Read More</a>
-        </article>
-    {{/each}}
-    {{else}}
-    <p>No posts found.</p>
-    {{/if}}
-    </container>
+<section>
+    <div class="container">
+        <h2>Latest Posts</h2>
+        <div class="posts-container">
+            {{#if posts}}
+                {{#each posts}}
+                    <a href="/Post/{{id}}" class="article-link">
+                        <article>
+                            <h3>{{title}}</h3>
+                            <p>{{content}}</p>
+                            <p>Posted by {{user.name}} {{createdAt}} </p>
+                            <div class="post-actions">
+                                <button class="btn edit-btn">Edit</button>
+                                <button class="btn delete-btn">Delete</button>
+                            </div>
+                        </article>
+                    </a>
+                {{/each}}
+            {{else}}
+                <p>No posts found.</p>
+            {{/if}}
+        </div>
+    </div>
 </section>
-
