--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,27 +8,29 @@
 </head>
 <body>
     <header class="header">
-        <!-- Nav bar -->
-        <nav class="navbar">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/dashboard">Dashboard</a></li>
-                {{#if logged_in}}
-                <li><button id="logout">Logout</button></li>
-                {{else}}
-                <li><a href="/login">Login</a></li>
-                {{!-- <li><a href="/signup">Signup</a></li> --}}
-                {{/if}}
-            </ul>
-        </nav>
-        <h1 class="blog-title">The Tech Blog</h1>
+        <div class="container">
+            <!-- Nav bar -->
+            <nav class="navbar">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
+                    {{#if logged_in}}
+                    <li><button id="logout" class="btn">Logout</button></li>
+                    {{else}}
+                    <li><a href="/login">Login</a></li>
+                    {{!-- <li><a href="/signup">Signup</a></li> --}}
+                    {{/if}}
+                </ul>
+            </nav>
+            <h1 class="blog-title">The Tech Blog</h1>
+        </div>
     </header>
     
     <main class="main-content">
         {{{body}}}
     </main>
 
-    <footer>
+    <footer class="container">
         <p>&copy; 2024 Tech Blog</p>
     </footer>
     <script src="/js/logout.js"></script>
