--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,17 +1,22 @@
 <section>
-    <h3>Dashboard</h3>
-    <container class="post">
-    {{#if posts}}
-    {{#each posts}}
-        <article>
-            <h3><a href="/edit/{{id}}">{{title}}</a></h3>
-            <p>{{content}}</p>
-            <p>Posted on {{createdAt}} </p>
-            <a href="/Post/{{id}}">Read More</a>
-        </article>
-    {{/each}}
-    {{else}}
-    <p>No posts found.</p>
-    {{/if}}
-    </container>
+    <div class="container">
+        <h3>Dashboard</h3>
+        <div class="posts-container">
+            {{#if posts}}
+                {{#each posts}}
+                        <article>
+                            <h3>{{title}}</h3>
+                            <p>{{content}}</p>
+                            <p>Posted by {{user.name}} {{createdAt}} </p>
+                            <div class="post-actions">
+                                <button class="btn edit-btn">Edit</button>
+                                <button class="btn delete-btn">Delete</button>
+                            </div>
+                        </article>
+                {{/each}}
+            {{else}}
+                <p>No posts found.</p>
+            {{/if}}
+        </div>
+    </div>
 </section>
