--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,20 +1,25 @@
-<div class="col-md-6">
-    <h3>Edit your post:</h3>
+<div class="col-md-6 edit-container">
+    <h2>Edit your post:</h2>
 
-    <form class="form new-project-form">
-        <input value="{{id}}" id="post-id" display="hide">
-      <div class="form-group">
-        <label for="project-name">Post title</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" value="{{title}}"/>
-      </div>
-      <div class="form-group">
-        <label for="project-desc">description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc">{{content}}</textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Edit</button>
-      </div>
-    </form>
-  </div>
+    <div class="container posts-container">
+        <article>
+            <h3>Edit your post:</h3>
 
-  <script  src="/js/edit.js"></script>
+            <form class="form new-project-form">
+                <input value="{{id}}" id="post-id" display="hide">
+                <div class="form-group">
+                    <label for="project-name">Post title</label>
+                    <input class="form-input" type="text" id="project-name" name="project-name" value="{{title}}" />
+                </div>
+                <div class="form-group">
+                    <label for="project-desc">Description:</label>
+                    <textarea class="form-input" id="project-desc" name="project-desc">{{content}}</textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Edit</button>
+                </div>
+            </form>
+        </article>
+    </div>
+</div>
+<script src="/js/edit.js"></script>
