--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,10 +39,15 @@ header .container {
 }
 
 header h1 {
-  margin: 0;
-  padding: 10px 0; /* Add padding to match the navbar */
+  margin: 10px auto; 
+  padding: 10px;
   font-size: 24px;
   font-weight: bold;
+  color: #816955;
+  background-color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  max-width: 200px; 
 }
 
 header nav ul {
