--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,10 +9,10 @@
                             <h3>{{title}}</h3>
                             <p>{{content}}</p>
                             <p>Posted by {{user.name}} {{createdAt}} </p>
-                            <div class="post-actions">
+                            {{!-- <div class="post-actions">
                                 <button class="btn edit-btn">Edit</button>
                                 <button class="btn delete-btn">Delete</button>
-                            </div>
+                            </div> --}}
                         </article>
                     </a>
                 {{/each}}
