--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,7 +7,7 @@
                         <article>
                             <h3>{{title}}</h3>
                             <p>{{content}}</p>
-                            <p>Posted by {{user.name}} {{createdAt}} </p>
+                            <p>Posted on {{createdAt}} </p>
                             <div class="post-actions">
                                 <button class="btn edit-btn">Edit</button>
                                 <button class="btn delete-btn">Delete</button>
