added comment routes, js and view. However it is not working as intended

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,3 +189,11 @@ footer {
 .comments-section ul li:last-child {
   margin-bottom: 0; /* Remove margin from the last comment */
 }
+
+.add-comment-section {
+  background-color: #f0dbbb;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
