--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,5 +34,7 @@
         <p>&copy; 2024 Tech Blog</p>
     </footer>
     <script src="/js/logout.js"></script>
+    <script src="/js/comment.js"></script>
+    
 </body>
 </html>
