--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -4,7 +4,21 @@
             <h2>{{post.title}}</h2>
             <p>{{post.content}}</p>
             <p>Posted by {{post.user.name}} on {{post.createdAt}}</p>
+            <button class="btn comment-btn">Add Comment</button> <!-- Add Comment Button -->
         </article>
+
+        <section class="add-comment-section">
+        <h3>Add Comment</h3>
+        <form id="comment-form">
+            <div class="form-group">
+            <textarea id="comment-content" placeholder="Enter your comment here" required></textarea>
+            </div>
+            <div class="form-group">
+            <button type="submit" class="btn">Submit</button>
+            </div>
+        </form>
+        </section>
+
 
         <section class="comments-section">
             <h3>Comments</h3>
