--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,6 +35,7 @@
     </footer>
     <script src="/js/logout.js"></script>
     <script src="/js/comment.js"></script>
+    <script src="/js/dashboard.js"></script>
     
 </body>
 </html>
