--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -10,6 +10,7 @@
         <section class="add-comment-section">
         <h3>Add Comment</h3>
         <form id="comment-form">
+            <input type="hidden" id="post-id" value="{{post.id}}">
             <div class="form-group">
             <textarea id="comment-content" placeholder="Enter your comment here" required></textarea>
             </div>
