Added comment addition and date formating

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,7 +7,7 @@
                         <article>
                             <h3>{{title}}</h3>
                             <p>{{content}}</p>
-                            <p>Posted on {{createdAt}} </p>
+                            <p>Posted on {{formatDate this.createdAt}} </p>
                             <div class="post-actions">
                                 <button class="btn edit-btn">Edit</button>
                                 <button class="btn delete-btn">Delete</button>
@@ -36,3 +36,4 @@
     </div>
 </section>
 
+<script src="/js/dashboard.js"></script>
