--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,7 +3,7 @@
         <article>
             <h2>{{post.title}}</h2>
             <p>{{post.content}}</p>
-            <p>Posted by {{post.user.name}} on {{post.createdAt}}</p>
+            <p>Posted by {{post.user.name}} on {{formatDate post.createdAt}}</p>
             <button class="btn comment-btn">Add Comment</button> <!-- Add Comment Button -->
         </article>
 
@@ -28,7 +28,7 @@
                     {{#each post.comments}}
                         <li>
                             {{this.content}}
-                            Posted by {{this.user.name}} on {{this.createdAt}}
+                            Posted by {{this.user.name}} on {{formatDate this.createdAt}}
                         </li> 
                     {{/each}}
                 </ul>
