--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,19 +1,16 @@
-<div class="col-md-6 edit-container">
-    <h2>Edit your post:</h2>
-
     <div class="container posts-container">
         <article>
             <h3>Edit your post:</h3>
 
-            <form class="form new-project-form">
+            <form class="form edit-post-form"> 
                 <input type="hidden" id="post-id" value="{{post.id}}">
                 <div class="form-group">
-                    <label for="project-name">Post title</label>
-                    <input class="form-input" type="text" id="project-name" name="project-name" value="{{title}}" />
+                    <label for="post-title">Post title</label>
+                    <input class="form-input" type="text" id="post-title" name="title" value="{{post.title}}" /> <!-- Updated ID and name -->
                 </div>
                 <div class="form-group">
-                    <label for="project-desc">Description:</label>
-                    <textarea class="form-input" id="project-desc" name="project-desc">{{content}}</textarea>
+                    <label for="post-content">Content:</label>
+                    <textarea class="form-input" id="post-content" name="content">{{post.content}}</textarea> <!-- Updated ID and name -->
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Edit</button>
@@ -22,4 +19,4 @@
         </article>
     </div>
 </div>
-<script src="/js/edit.js"></script>
+<script src="/js/edit.js"></script> 
