--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,13 +12,12 @@
             <!-- Nav bar -->
             <nav class="navbar">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/dashboard">Dashboard</a></li>
+                    <li><a href="/" class="btn">Home</a></li>
+                    <li><a href="/dashboard" class="btn">Dashboard</a></li>
                     {{#if logged_in}}
                     <li><button id="logout" class="btn">Logout</button></li>
                     {{else}}
-                    <li><a href="/login">Login</a></li>
-                    {{!-- <li><a href="/signup">Signup</a></li> --}}
+                    <li><a href="/login" class="btn">Login</a></li>
                     {{/if}}
                 </ul>
             </nav>
